--- a/Ate-Bit/index.html
+++ b/Ate-Bit/index.html
@@ -5,19 +5,12 @@
     <script src="p5.dom.js"></script>
     <script src="p5.sound.js"></script>
 
-    <script src="score.js"></script>
-    <script src="health.js"></script>
-    <script src="animation.js"></script>
-    <script src="collision.js"></script>
-    <script src="projectile.js"></script>
-    <script src="projectileManager.js"></script>
-    <script src="character.js"></script>
-    <script src="enemyManager.js"></script>
+
     <script src="sketch.js"></script>
   </head>
   <body>
 
-    <h1>Ate-Bit</h1>
+    <h1>Ate-Bit Math Game</h1>
 
 
 
